--- a/crqaCategorical.ipynb
+++ b/crqaCategorical.ipynb
@@ -42,15 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from utils import filter_data, interpolate_missing_data\n",
-    "from utils.rqa_utils import perform_crqa\n",
-    "from utils.plot_utils import plot_ts_and_crqa"
+    "from utils import interpolate_missing_data\n",
+    "from utils.rqa_utils import perform_crqa"
    ]
   },
   {
@@ -73,10 +72,6 @@
     "# First set the directory path for the data\n",
     "data_directory = \"data/crqaCategorical/\"\n",
     "\n",
-    "# Then decide whether you'd like to save the plots \n",
-    "# These are saved in \"images/rqa\"\n",
-    "save_image = True\n",
-    "\n",
     "# Set the file name for the data\n",
     "file_name = \"conversation_real.txt\"\n",
     "file_path = os.path.join(data_directory, file_name)\n",
@@ -90,9 +85,10 @@
     "    'radius': 0.1,\n",
     "    'tw': 2,\n",
     "    'minl': 2,\n",
-    "    'doPlots': False,\n",
-    "    'plotMode': 'recurrence',\n",
-    "    'phaseSpace': False,\n",
+    "    'doPlots': True,\n",
+    "    'plotMode': 'rp-timeseries',\n",
+    "    'pointSize': 2, \n",
+    "    'showMetrics': True,\n",
     "    'doStatsFile': False\n",
     "}\n",
     "\n",
@@ -106,24 +102,8 @@
     "    # Interpolate any missing data that might be present in the file\n",
     "    data = interpolate_missing_data(data)\n",
     "\n",
-    "    # Apply a filter to the data\n",
-    "    data = filter_data(data)\n",
-    "\n",
     "    # Perform CRQA using perform_rqa function from rqa_utils\n",
-    "    crqa_results, rp_results = perform_crqa(data, crqa_params)\n",
-    "\n",
-    "    # Create RQA metrics dictionary\n",
-    "    if rp_results is not None:\n",
-    "        crqa_metrics = {\n",
-    "            'Recurrence Rate': crqa_results.get('perc_recur'),\n",
-    "            'Determinism': crqa_results.get('perc_determ'),\n",
-    "            'Maxline': crqa_results.get('maxl_found'),\n",
-    "            'Meanline': crqa_results.get('llmnsd')[0], \n",
-    "            'Entropy': crqa_results.get('entropy')[0],\n",
-    "        }\n",
-    "\n",
-    "    # Plot time series and recurrence plot side-by-side\n",
-    "    plot_ts_and_crqa(data.iloc[:, 0].values, data.iloc[:, 1].values, rp_results, crqa_metrics, save_image, f'images/rqa/{file_name}_combined_plot.png')\n",
+    "    perform_crqa(data, crqa_params, file_name)\n",
     "\n",
     "    print('CRQA analysis and plotting completed successfully!')\n",
     "else:\n",
@@ -138,10 +118,10 @@
     "\n",
     "If your code ran successfully, you should see the following CRQA metrics for the data:\n",
     "\n",
-    "- %REC: 7.6% - This value tells us how often the two speakers used similar words at a similar time. Higher recurrence values indicate greater alignment in word usage between the speakers.\n",
-    "- %DET: 35.2% - This represents the proportion of recurrence points that form diagonal lines, reflecting the predictability of speaker's word usage.\n",
-    "- Maxline: 18 - This metric identifies the longest sequence of recurring word usage between speakers.\n",
-    "- Meanline: 2.6 - This is the average length of diagonal lines in the recurrence plot, giving us insight into the typical duration for which the speakers' word usage remained the same.\n",
+    "- %REC: 9.8% - This value tells us how often the two speakers used similar words at a similar time. Higher recurrence values indicate greater alignment in word usage between the speakers.\n",
+    "- %DET: 39.3% - This represents the proportion of recurrence points that form diagonal lines, reflecting the predictability of speaker's word usage.\n",
+    "- Maxline: 20 - This metric identifies the longest sequence of recurring word usage between speakers.\n",
+    "- Meanline: 2.7 - This is the average length of diagonal lines in the recurrence plot, giving us insight into the typical duration for which the speakers' word usage remained the same.\n",
     "\n",
     "Now let's see how these metrics compare when we analyse conversation data of individuals who were not paired together. Click \"play\" on the code chunk below to run CRQA on a [transcript](data/crqaCategorical/conversation_pseudo.txt), comprised of pseudo data, and observe the differences."
    ]
@@ -152,15 +132,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "\n",
     "# First set the directory path for the data\n",
     "data_directory = \"data/crqaCategorical/\"\n",
-    "\n",
-    "# Then decide whether you'd like to save the plots\n",
-    "# These are saved in \"images/rqa\"\n",
-    "save_image = True\n",
     "\n",
     "# Set the file names for the data\n",
     "file_names = [\"conversation_real.txt\", \"conversation_pseudo.txt\"]\n",
@@ -175,9 +148,10 @@
     "    'tw': 2,\n",
     "    'minl': 2,\n",
     "    'doPlots': False,\n",
-    "    'plotMode': 'recurrence',\n",
-    "    'phaseSpace': False,\n",
-    "    'doStatsFile': False\n",
+    "    'plotMode': 'rp-timeseries',\n",
+    "    'pointSize': 2, \n",
+    "    'showMetrics': True,\n",
+    "    'doStatsFile': True\n",
     "}\n",
     "\n",
     "# Loop through the file names\n",
@@ -194,25 +168,8 @@
     "        # Interpolate any missing data that might be present in the file\n",
     "        data = interpolate_missing_data(data)\n",
     "\n",
-    "        # Apply a filter to the data\n",
-    "        data = filter_data(data)\n",
-    "\n",
     "        # Perform CRQA using perform_crqa function from rqa_utils\n",
-    "        crqa_results, rp_results = perform_crqa(data, crqa_params)\n",
-    "\n",
-    "        # Create RQA metrics dictionary\n",
-    "        if rp_results is not None:\n",
-    "            crqa_metrics = {\n",
-    "                'Recurrence Rate': crqa_results.get('perc_recur'),\n",
-    "                'Determinism': crqa_results.get('perc_determ'),\n",
-    "                'Maxline': crqa_results.get('maxl_found'),\n",
-    "                'Meanline': crqa_results.get('llmnsd')[0], \n",
-    "                'Entropy': crqa_results.get('entropy')[0],\n",
-    "            }\n",
-    "\n",
-    "        # Plot time series and recurrence plot side-by-side\n",
-    "        plot_ts_and_crqa(data.iloc[:, 0].values, data.iloc[:, 1].values, rp_results, crqa_metrics, save_image, f'images/rqa/{file_name}_combined_plot.png'\n",
-    "        )\n",
+    "        perform_crqa(data, crqa_params, file_name)\n",
     "\n",
     "        print(f'CRQA analysis and plotting completed successfully for {file_name}!')\n",
     "    else:\n",
