--- a/rqaCategorical.ipynb
+++ b/rqaCategorical.ipynb
@@ -45,14 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from utils.rqa_utils import perform_rqa\n",
-    "from utils.plot_utils import plot_ts_and_rqa"
+    "from utils.rqa_utils import perform_rqa"
    ]
   },
   {
@@ -75,10 +74,6 @@
     "# First set the directory path for the data\n",
     "data_directory = \"data/rqaCategorical/\"\n",
     "\n",
-    "# Then decide whether you'd like to save the plots \n",
-    "# These are saved in \"images/rqa\"\n",
-    "save_image = True\n",
-    "\n",
     "# Set the file name for the data\n",
     "file_name = \"lyricsA.txt\"\n",
     "file_path = os.path.join(data_directory, file_name)\n",
@@ -92,9 +87,10 @@
     "    'radius': 0.1,\n",
     "    'tw': 2,\n",
     "    'minl': 2,\n",
-    "    'doPlots': False,\n",
-    "    'plotMode': 'recurrence',\n",
-    "    'phaseSpace': False,\n",
+    "    'doPlots': True,\n",
+    "    'plotMode': 'rp-timeseries',\n",
+    "    'pointSize': 2, \n",
+    "    'showMetrics': True,\n",
     "    'doStatsFile': False\n",
     "}\n",
     "\n",
@@ -109,20 +105,7 @@
     "    numerical_data = data.iloc[:, 0].to_frame()\n",
     "\n",
     "    # Perform RQA using the perform_rqa function from rqa_utils\n",
-    "    rqa_results, rp_results = perform_rqa(numerical_data, rqa_params)\n",
-    "\n",
-    "    # Create RQA metrics dictionary\n",
-    "    if rp_results is not None:\n",
-    "        rqa_metrics = { \n",
-    "            'Recurrence Rate': rqa_results.get('perc_recur'),\n",
-    "            'Determinism': rqa_results.get('perc_determ'),\n",
-    "            'Maxline': rqa_results.get('maxl_found'),\n",
-    "            'Meanline': rqa_results.get('llmnsd')[0], \n",
-    "            'Entropy': rqa_results.get('entropy')[0],\n",
-    "        }\n",
-    "\n",
-    "    # Plot time series and recurrence plot side-by-side\n",
-    "    plot_ts_and_rqa(numerical_data.iloc[:, 0].values, rp_results, rqa_metrics, save_image, f'images/rqa/{file_name}_combined_plot.png')\n",
+    "    perform_rqa(numerical_data, rqa_params, file_name)\n",
     "\n",
     "    print('RQA analysis and plotting completed successfully!')\n",
     "else:\n",
@@ -154,10 +137,6 @@
     "# First set the directory path for the data\n",
     "data_directory = \"data/rqaCategorical/\"\n",
     "\n",
-    "# Then decide whether you'd like to save the plots \n",
-    "# These are saved in \"images/rqa\"\n",
-    "save_image = True\n",
-    "\n",
     "# Set the file names for the data\n",
     "file_names = [\"lyricsA.txt\", \"lyricsB.txt\"]\n",
     "\n",
@@ -170,9 +149,10 @@
     "    'radius': 0.1,\n",
     "    'tw': 2,\n",
     "    'minl': 2,\n",
-    "    'doPlots': False,\n",
-    "    'plotMode': 'recurrence',\n",
-    "    'phaseSpace': False,\n",
+    "    'doPlots': True,\n",
+    "    'plotMode': 'rp-timeseries',\n",
+    "    'pointSize': 2, \n",
+    "    'showMetrics': True,\n",
     "    'doStatsFile': False\n",
     "}\n",
     "\n",
@@ -190,22 +170,9 @@
     "        # Assume the data is a single unnamed column\n",
     "        numerical_data = data.iloc[:, 0].to_frame()\n",
     "\n",
-    "        # Perform RQA using the perform_rqa function from rqa_utils\n",
-    "        rqa_results, rp_results = perform_rqa(numerical_data, rqa_params)\n",
+    "        # Perform RQA using perform_rqa function from rqa_utils\n",
+    "        perform_rqa(numerical_data, rqa_params, file_name)\n",
     "\n",
-    "        # Create RQA metrics dictionary\n",
-    "        if rp_results is not None:\n",
-    "            rqa_metrics = { \n",
-    "                'Recurrence Rate': rqa_results.get('perc_recur'),\n",
-    "                'Determinism': rqa_results.get('perc_determ'),\n",
-    "                'Maxline': rqa_results.get('maxl_found'),\n",
-    "                'Meanline': rqa_results.get('llmnsd')[0], \n",
-    "                'Entropy': rqa_results.get('entropy')[0],\n",
-    "            }\n",
-    "\n",
-    "        # Plot time series and recurrence plot side-by-side\n",
-    "        plot_ts_and_rqa(numerical_data.iloc[:, 0].values, rp_results, rqa_metrics, save_image, f'images/rqa/{file_name}_combined_plot.png')\n",
-    "        \n",
     "        print('RQA analysis and plotting completed successfully!')\n",
     "    else:\n",
     "        print(f'File {file_name} not found in directory {data_directory}')"
