--- a/rqaContinuous.ipynb
+++ b/rqaContinuous.ipynb
@@ -45,16 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from utils import filter_data, interpolate_missing_data\n",
-    "from utils.rqa_utils import perform_rqa\n",
-    "from utils.plot_utils import plot_ts_and_rqa, plot_rqa_multi_radii"
+    "from utils.cleaning_utils import filter_data, interpolate_missing_data\n",
+    "from utils.rqa_utils import perform_rqa"
    ]
   },
   {
@@ -75,10 +73,6 @@
     "# First set the directory path for the data\n",
     "data_directory = \"data/rqaContinuous/\"\n",
     "\n",
-    "# Then decide whether you'd like to save the plots \n",
-    "# These are saved in \"images/rqa\"\n",
-    "save_image = True\n",
-    "\n",
     "# Set the file name for the data\n",
     "file_name = \"walkerAfriend.txt\"\n",
     "file_path = os.path.join(data_directory, file_name)\n",
@@ -92,10 +86,11 @@
     "    'radius': 0.15,\n",
     "    'tw': 2,\n",
     "    'minl': 2,\n",
-    "    'doPlots': False,\n",
-    "    'plotMode': 'recurrence',\n",
-    "    'phaseSpace': False,\n",
-    "    'doStatsFile': False\n",
+    "    'doPlots': True,\n",
+    "    'plotMode': 'rp-timeseries',\n",
+    "    'pointSize': 2, \n",
+    "    'showMetrics': True,\n",
+    "    'doStatsFile': True\n",
     "}\n",
     "\n",
     "# Check whether the file containing the data exists\n",
@@ -115,21 +110,7 @@
     "    continuous_data = filter_data(continuous_data)\n",
     "    \n",
     "    # Perform RQA using perform_rqa function from rqa_utils\n",
-    "    rqa_results, rp_results = perform_rqa(continuous_data, rqa_params)\n",
-    "\n",
-    "    # Print RQA results\n",
-    "    # Create RQA metrics dictionary\n",
-    "    if rp_results is not None:\n",
-    "        rqa_metrics = { \n",
-    "            'Recurrence Rate': rqa_results.get('perc_recur'),\n",
-    "            'Determinism': rqa_results.get('perc_determ'),\n",
-    "            'Maxline': rqa_results.get('maxl_found'),\n",
-    "            'Meanline': rqa_results.get('llmnsd')[0], \n",
-    "            'Entropy': rqa_results.get('entropy')[0],\n",
-    "        }\n",
-    "\n",
-    "    # Plot time series and recurrence plot side-by-side\n",
-    "    plot_ts_and_rqa(continuous_data.iloc[:, 0].values, rp_results, rqa_metrics, save_image, f'images/rqa/{file_name}_combined_plot.png')\n",
+    "    perform_rqa(continuous_data, rqa_params, file_name)\n",
     "\n",
     "    print('RQA analysis and plotting completed successfully!')\n",
     "else:\n",
@@ -161,14 +142,8 @@
     "# First set the directory path for the data\n",
     "data_directory = \"data/rqaContinuous/\"\n",
     "\n",
-    "# Then decide whether you'd like to save the plots \n",
-    "# These are saved in \"images/rqa\"\n",
-    "save_image = True\n",
-    "\n",
     "# Set the file names for the data\n",
     "file_names = [\"walkerAfriend.txt\", \"walkerBfriend.txt\"]\n",
-    "\n",
-    "file_path = os.path.join(data_directory, file_name)\n",
     "\n",
     "# Set RQA parameters\n",
     "rqa_params = {\n",
@@ -179,17 +154,17 @@
     "    'radius': 0.15,\n",
     "    'tw': 2,\n",
     "    'minl': 2,\n",
-    "    'doPlots': False,\n",
-    "    'plotMode': 'recurrence',\n",
-    "    'phaseSpace': False,\n",
+    "    'doPlots': True,\n",
+    "    'plotMode': 'rp-timeseries',\n",
+    "    'pointSize': 2, \n",
+    "    'showMetrics': True,\n",
     "    'doStatsFile': False\n",
     "}\n",
-    "\n",
     "# Loop through each file and perform RQA\n",
     "for file_name in file_names:\n",
     "    file_path = os.path.join(data_directory, file_name)\n",
     "\n",
-    "    # Check if the file exists\n",
+    "    # Check whether the file containing the data exists\n",
     "    if os.path.exists(file_path):\n",
     "        print(f'Loading file: {file_name}')\n",
     "\n",
@@ -204,27 +179,13 @@
     "\n",
     "        # Apply a filter to the data\n",
     "        continuous_data = filter_data(continuous_data)\n",
-    "    \n",
-    "        # Perform RQA using perform_rqa function from rqa_utils\n",
-    "        rqa_results, rp_results = perform_rqa(continuous_data, rqa_params)\n",
-    "\n",
-    "        # Print RQA results\n",
-    "        # Create RQA metrics dictionary\n",
-    "        if rp_results is not None:\n",
-    "            rqa_metrics = { \n",
-    "                'Recurrence Rate': rqa_results.get('perc_recur'),\n",
-    "                'Determinism': rqa_results.get('perc_determ'),\n",
-    "                'Maxline': rqa_results.get('maxl_found'),\n",
-    "                'Meanline': rqa_results.get('llmnsd')[0], \n",
-    "                'Entropy': rqa_results.get('entropy')[0],\n",
-    "            }\n",
-    "\n",
-    "        # Plot time series and recurrence plot side-by-side\n",
-    "        plot_ts_and_rqa(continuous_data.iloc[:, 0].values, rp_results, rqa_metrics, save_image, f'images/rqa/{file_name}_combined_plot.png')\n",
     "        \n",
-    "        print('RQA analysis and plotting completed successfully!')\n",
-    "    else:\n",
-    "        print(f'File {file_name} not found in directory {data_directory}')"
+    "        # Perform RQA using perform_rqa function from rqa_utils\n",
+    "        perform_rqa(continuous_data, rqa_params, file_name)\n",
+    "\n",
+    "    print('RQA analysis and plotting completed successfully!')\n",
+    "else:\n",
+    "    print(f'File {file_name} not found in directory {data_directory}')"
    ]
   },
   {
@@ -265,27 +226,24 @@
     "# First set the directory path for the data\n",
     "data_directory = \"data/rqaContinuous/\"\n",
     "\n",
-    "# Then decide whether you'd like to save the plots \n",
-    "# These are saved in \"images/rqa\"\n",
-    "save_image = True\n",
-    "\n",
     "# Set the file name for the data\n",
     "file_name = \"walkerAfriend.txt\"\n",
     "file_path = os.path.join(data_directory, file_name)\n",
     "\n",
-    "# Set RQA parameters\n",
     "# Set RQA parameters\n",
     "rqa_params = {\n",
     "    'norm': 2,\n",
     "    'eDim': 3,\n",
     "    'tLag': 4,\n",
     "    'rescaleNorm': 1,\n",
+    "    'radius': 0.15,\n",
     "    'tw': 2,\n",
     "    'minl': 2,\n",
-    "    'doPlots': False,\n",
-    "    'plotMode': 'recurrence',\n",
-    "    'phaseSpace': False,\n",
-    "    'doStatsFile': False\n",
+    "    'doPlots': True,\n",
+    "    'plotMode': 'rp-timeseries',\n",
+    "    'pointSize': 2, \n",
+    "    'showMetrics': True,\n",
+    "    'doStatsFile': True\n",
     "}\n",
     "\n",
     "# Define radii to test\n",
@@ -295,7 +253,7 @@
     "if os.path.exists(file_path):\n",
     "    print(f'Loading file: {file_name}')\n",
     "\n",
-    "    # Load the CSV file into a DataFrame\n",
+    "    # Load the file into a DataFrame\n",
     "    data = pd.read_csv(file_path, header=None)\n",
     "\n",
     "    # Assume the data is a single unnamed column\n",
@@ -307,34 +265,14 @@
     "    # Apply a filter to the data\n",
     "    continuous_data = filter_data(continuous_data)\n",
     "    \n",
-    "    # Normalise the data by using a z-score\n",
-    "    continuous_data = (continuous_data - continuous_data.mean()) / continuous_data.std()\n",
-    "\n",
     "    # Loop through each radius value and perform RQA\n",
-    "    rp_results_list = []\n",
-    "    rqa_metrics_list = []\n",
     "    for radius in radii:\n",
     "        print(f'Running RQA with radius: {radius}')\n",
     "        rqa_params['radius'] = radius\n",
     "\n",
     "        # Perform RQA using perform_rqa function from rqa_utils\n",
-    "        rqa_results, rp_results = perform_rqa(continuous_data, rqa_params)\n",
+    "        perform_rqa(continuous_data, rqa_params, file_name)\n",
     "\n",
-    "        # Create RQA metrics dictionary\n",
-    "        if rp_results is not None:\n",
-    "            rqa_metrics = { \n",
-    "                'Recurrence Rate': rqa_results.get('perc_recur'),\n",
-    "                'Determinism': rqa_results.get('perc_determ'),\n",
-    "                'Maxline': rqa_results.get('maxl_found'),\n",
-    "                'Meanline': rqa_results.get('llmnsd')[0], \n",
-    "                'Entropy': rqa_results.get('entropy')[0],\n",
-    "            }\n",
-    "            rqa_metrics_list.append(rqa_metrics)\n",
-    "            rp_results_list.append(rp_results)\n",
-    "\n",
-    "    # Plot recurrence plots and metrics for different radii\n",
-    "    plot_rqa_multi_radii(rp_results_list, rqa_metrics_list, radii, save_image, f'images/rqa/{file_name}_multi_radii_plot.png')\n",
-    "    \n",
     "    print('RQA analysis and plotting completed successfully!')\n",
     "else:\n",
     "    print(f'File {file_name} not found in directory {data_directory}')"
@@ -346,7 +284,7 @@
    "source": [
     "#### Selecting the Optimal Radius\n",
     "\n",
-    "When selecting a radius, best practice involves using a range of values and choosing the one that yields a reasonable set of %REC values for biological systems (typically between 0.5% and 5%). In this case, the best radius for our walking data appears to be 0.3 or 0.5, which yield %REC values of 0.2% and 4.7% respectively. \n",
+    "When selecting a radius, best practice involves using a range of values and choosing the one that yields a reasonable set of %REC values for biological systems (typically between 0.5% and 5%). In this case, the best radius for our walking data appears to between 0.1 and 0.3, which yield %REC values of 0.2% and 4.7% respectively. \n",
     "\n",
     "In real datasets, it is important to evaluate whether the distribution of RQA metrics changes significantly across different settings. Although the absolute values of the RQA metrics may vary (e.g., %REC will increase as the radius increases), the overall distribution across the dataset should remain generally consistent. This consistency can give you confidence that your parameters are appropriate."
    ]
