--- a/rqaWindowed.ipynb
+++ b/rqaWindowed.ipynb
@@ -36,15 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "from utils import filter_data, interpolate_missing_data\n",
-    "from utils.rqa_utils import perform_rqa, perform_crqa\n",
-    "from utils.plot_utils import plot_ts_and_rqa, plot_ts_and_crqa"
+    "from utils.rqa_utils import perform_rqa, perform_crqa"
    ]
   },
   {
@@ -84,10 +83,11 @@
     "    'radius': 0.2,\n",
     "    'tw': 2,\n",
     "    'minl': 2,\n",
-    "    'doPlots': False,\n",
-    "    'plotMode': 'recurrence',\n",
-    "    'phaseSpace': False,\n",
-    "    'doStatsFile': False\n",
+    "    'doPlots': True,\n",
+    "    'plotMode': 'rp-timeseries',\n",
+    "    'pointSize': 2, \n",
+    "    'showMetrics': True,\n",
+    "    'doStatsFile': True\n",
     "}\n",
     "\n",
     "# Windowed analysis parameters\n",
@@ -120,22 +120,8 @@
     "        window_data = continuous_data[start:end]\n",
     "\n",
     "        # Perform RQA using perform_rqa function from rqa_utils\n",
-    "        rqa_results, rp_results = perform_rqa(window_data, rqa_params)\n",
-    "\n",
-    "        # Print RQA results\n",
-    "        # Create RQA metrics dictionary\n",
-    "        if rp_results is not None:\n",
-    "            rqa_metrics = {\n",
-    "                'Recurrence Rate': rqa_results.get('perc_recur'),\n",
-    "                'Determinism': rqa_results.get('perc_determ'),\n",
-    "                'Maxline': rqa_results.get('maxl_found'),\n",
-    "                'Meanline': rqa_results.get('llmnsd')[0], \n",
-    "                'Entropy': rqa_results.get('entropy')[0],\n",
-    "            }\n",
-    "\n",
-    "        # Plot time series and recurrence plot side-by-side\n",
-    "        plot_ts_and_rqa(window_data[0].values, rp_results, rqa_metrics, save_image, f'images/rqa/{file_name}_window_{start}_to_{end}_combined_plot.png')\n",
-    "    \n",
+    "        perform_rqa(window_data, rqa_params, file_name)\n",
+    " \n",
     "    print('Windowed RQA analysis and plotting completed successfully!')\n",
     "else:\n",
     "    print(f'File {file_name} not found in directory {data_directory}')"
@@ -170,10 +156,6 @@
     "# First set the directory path for the data\n",
     "data_directory = \"data/crqaContinuous/\"\n",
     "\n",
-    "# Then decide whether you'd like to save the plots \n",
-    "# These are saved in \"images/rqa\"\n",
-    "save_image = True\n",
-    "\n",
     "# Set the file name for the data\n",
     "file_name = \"walkersABfriend.txt\"\n",
     "file_path = os.path.join(data_directory, file_name)\n",
@@ -187,10 +169,11 @@
     "    'radius': 0.2,\n",
     "    'tw': 2,\n",
     "    'minl': 2,\n",
-    "    'doPlots': False,\n",
-    "    'plotMode': 'recurrence',\n",
-    "    'phaseSpace': False,\n",
-    "    'doStatsFile': False\n",
+    "    'doPlots': True,\n",
+    "    'plotMode': 'rp-timeseries',\n",
+    "    'pointSize': 2, \n",
+    "    'showMetrics': True,\n",
+    "    'doStatsFile': True\n",
     "}\n",
     "\n",
     "# Windowed analysis parameters\n",
@@ -227,20 +210,7 @@
     "        window_data = data[start:end]\n",
     "\n",
     "        # Perform CRQA using perform_crqa function from rqa_utils\n",
-    "        crqa_results, rp_results = perform_crqa(window_data, crqa_params)\n",
-    "\n",
-    "        # Create RQA metrics dictionary\n",
-    "        if rp_results is not None:\n",
-    "            crqa_metrics = {\n",
-    "                'Recurrence Rate': crqa_results.get('perc_recur'),\n",
-    "                'Determinism': crqa_results.get('perc_determ'),\n",
-    "                'Maxline': crqa_results.get('maxl_found'),\n",
-    "                'Meanline': crqa_results.get('llmnsd')[0], \n",
-    "                'Entropy': crqa_results.get('entropy')[0],\n",
-    "            }\n",
-    "\n",
-    "        # Plot time series and recurrence plot side-by-side\n",
-    "        plot_ts_and_crqa(window_data.iloc[:, 0].values, window_data.iloc[:, 1].values, rp_results, crqa_metrics, save_image, f'images/rqa/{file_name}_window_{start}_to_{end}_combined_plot.png')\n",
+    "        perform_crqa(window_data, crqa_params, file_name)\n",
     "\n",
     "    print('Windowed CRQA analysis and plotting completed successfully!')\n",
     "else:\n",
