--- a/crqaContinuous.ipynb
+++ b/crqaContinuous.ipynb
@@ -43,15 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "from utils import filter_data, interpolate_missing_data\n",
-    "from utils.rqa_utils import perform_crqa\n",
-    "from utils.plot_utils import plot_ts_and_crqa, plot_rqa_multi_radii"
+    "from utils.rqa_utils import perform_crqa"
    ]
   },
   {
@@ -72,10 +71,6 @@
     "# First set the directory path for the data\n",
     "data_directory = \"data/crqaContinuous/\"\n",
     "\n",
-    "# Then decide whether you'd like to save the plots \n",
-    "# These are saved in \"images/rqa\"\n",
-    "save_image = True\n",
-    "\n",
     "# Set the file name for the data\n",
     "file_name = \"walkersABfriend.txt\"\n",
     "file_path = os.path.join(data_directory, file_name)\n",
@@ -89,9 +84,10 @@
     "    'radius': 0.15,\n",
     "    'tw': 2,\n",
     "    'minl': 2,\n",
-    "    'doPlots': False,\n",
-    "    'plotMode': 'recurrence',\n",
-    "    'phaseSpace': False,\n",
+    "    'doPlots': True,\n",
+    "    'plotMode': 'rp-timeseries',\n",
+    "    'pointSize': 2, \n",
+    "    'showMetrics': True,\n",
     "    'doStatsFile': False\n",
     "}\n",
     "\n",
@@ -109,20 +105,7 @@
     "    data = filter_data(data)\n",
     "\n",
     "    # Perform CRQA using perform_rqa function from rqa_utils\n",
-    "    crqa_results, rp_results = perform_crqa(data, crqa_params)\n",
-    "\n",
-    "    # Create RQA metrics dictionary\n",
-    "    if rp_results is not None:\n",
-    "        crqa_metrics = {\n",
-    "            'Recurrence Rate': crqa_results.get('perc_recur'),\n",
-    "            'Determinism': crqa_results.get('perc_determ'),\n",
-    "            'Maxline': crqa_results.get('maxl_found'),\n",
-    "            'Meanline': crqa_results.get('llmnsd')[0], \n",
-    "            'Entropy': crqa_results.get('entropy')[0],\n",
-    "        }\n",
-    "\n",
-    "    # Plot time series and recurrence plot side-by-side\n",
-    "    plot_ts_and_crqa(data.iloc[:, 0].values, data.iloc[:, 1].values, rp_results, crqa_metrics, save_image, f'images/rqa/{file_name}_combined_plot.png')\n",
+    "    perform_crqa(data, crqa_params, file_name)\n",
     "\n",
     "    print('CRQA analysis and plotting completed successfully!')\n",
     "else:\n",
@@ -172,10 +155,6 @@
     "# First set the directory path for the data\n",
     "data_directory = \"data/crqaContinuous/\"\n",
     "\n",
-    "# Then decide whether you'd like to save the plots \n",
-    "# These are saved in \"images/rqa\"\n",
-    "save_image = True\n",
-    "\n",
     "# Set the file name for the data\n",
     "file_name = \"walkersABfriend.txt\"\n",
     "file_path = os.path.join(data_directory, file_name)\n",
@@ -190,9 +169,10 @@
     "    'tw': 2,\n",
     "    'minl': 2,\n",
     "    'doPlots': False,\n",
-    "    'plotMode': 'recurrence',\n",
-    "    'phaseSpace': False,\n",
-    "    'doStatsFile': False\n",
+    "    'plotMode': 'rp-timeseries',\n",
+    "    'pointSize': 2, \n",
+    "    'showMetrics': True,\n",
+    "    'doStatsFile': True\n",
     "}\n",
     "\n",
     "# Radii to iterate over\n",
@@ -211,34 +191,13 @@
     "    # Apply a filter to the data\n",
     "    data = filter_data(data)\n",
     "\n",
-    "    # Lists to store results for different radii\n",
-    "    rp_results_list = []\n",
-    "    crqa_metrics_list = []\n",
-    "\n",
     "    # Loop over each radius and calculate CRQA\n",
     "    for radius in radii:\n",
     "        print(f'Calculating CRQA with radius: {radius}')\n",
     "        crqa_params['radius'] = radius\n",
     "\n",
     "        # Perform CRQA using perform_crqa function from rqa_utils\n",
-    "        crqa_results, rp_results = perform_crqa(data, crqa_params)\n",
-    "\n",
-    "        # Create RQA metrics dictionary for each radius\n",
-    "        if rp_results is not None:\n",
-    "            crqa_metrics = {\n",
-    "                'Recurrence Rate': crqa_results.get('perc_recur'),\n",
-    "                'Determinism': crqa_results.get('perc_determ'),\n",
-    "                'Maxline': crqa_results.get('maxl_found'),\n",
-    "                'Meanline': crqa_results.get('llmnsd')[0], \n",
-    "                'Entropy': crqa_results.get('entropy')[0],\n",
-    "            }\n",
-    "\n",
-    "            crqa_metrics_list.append(crqa_metrics)\n",
-    "            rp_results_list.append(rp_results)\n",
-    "\n",
-    "    # Plot recurrence plots and metrics for different radii\n",
-    "    plot_filename = f'images/rqa/{file_name}_multi_radii_plot.png'\n",
-    "    plot_rqa_multi_radii(rp_results_list, crqa_metrics_list, radii, save_image, plot_filename)\n",
+    "        perform_crqa(data, crqa_params, file_name)\n",
     "\n",
     "    print('CRQA analysis and plotting completed successfully!')\n",
     "else:\n",
