rqa plot saving updated

--- a/crqaCategorical.ipynb
+++ b/crqaCategorical.ipynb
@@ -88,6 +88,7 @@
     "    'doPlots': True,\n",
     "    'plotMode': 'rp-timeseries',\n",
     "    'pointSize': 2, \n",
+    "    'saveFig': False,\n",
     "    'showMetrics': True,\n",
     "    'doStatsFile': False\n",
     "}\n",
@@ -150,6 +151,7 @@
     "    'doPlots': False,\n",
     "    'plotMode': 'rp-timeseries',\n",
     "    'pointSize': 2, \n",
+    "    'saveFig': False,\n",
     "    'showMetrics': True,\n",
     "    'doStatsFile': True\n",
     "}\n",
