--- a/crqaContinuous.ipynb
+++ b/crqaContinuous.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +87,7 @@
     "    'doPlots': True,\n",
     "    'plotMode': 'rp-timeseries',\n",
     "    'pointSize': 2, \n",
+    "    'saveFig': False,\n",
     "    'showMetrics': True,\n",
     "    'doStatsFile': False\n",
     "}\n",
@@ -171,6 +172,7 @@
     "    'doPlots': False,\n",
     "    'plotMode': 'rp-timeseries',\n",
     "    'pointSize': 2, \n",
+    "    'saveFig': False,\n",
     "    'showMetrics': True,\n",
     "    'doStatsFile': True\n",
     "}\n",
