--- a/rqaCategorical.ipynb
+++ b/rqaCategorical.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,8 @@
     "    'minl': 2,\n",
     "    'doPlots': True,\n",
     "    'plotMode': 'rp-timeseries',\n",
-    "    'pointSize': 2, \n",
+    "    'pointSize': 2,\n",
+    "    'saveFig': False, \n",
     "    'showMetrics': True,\n",
     "    'doStatsFile': False\n",
     "}\n",
@@ -151,6 +152,7 @@
     "    'minl': 2,\n",
     "    'doPlots': True,\n",
     "    'plotMode': 'rp-timeseries',\n",
+    "    'saveFig': False,\n",
     "    'pointSize': 2, \n",
     "    'showMetrics': True,\n",
     "    'doStatsFile': False\n",
