--- a/rqaContinuous.ipynb
+++ b/rqaContinuous.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +89,9 @@
     "    'doPlots': True,\n",
     "    'plotMode': 'rp-timeseries',\n",
     "    'pointSize': 2, \n",
+    "    'saveFig': False,\n",
     "    'showMetrics': True,\n",
-    "    'doStatsFile': True\n",
+    "    'doStatsFile': False\n",
     "}\n",
     "\n",
     "# Check whether the file containing the data exists\n",
@@ -157,6 +158,7 @@
     "    'doPlots': True,\n",
     "    'plotMode': 'rp-timeseries',\n",
     "    'pointSize': 2, \n",
+    "    'saveFig': False,\n",
     "    'showMetrics': True,\n",
     "    'doStatsFile': False\n",
     "}\n",
@@ -242,6 +244,7 @@
     "    'doPlots': True,\n",
     "    'plotMode': 'rp-timeseries',\n",
     "    'pointSize': 2, \n",
+    "    'saveFig': False,\n",
     "    'showMetrics': True,\n",
     "    'doStatsFile': True\n",
     "}\n",
